--- a/src/AspNetCoreAngularSignalR/angularApp/app/shared/components/navigation/navigation.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/shared/components/navigation/navigation.component.html
@@ -13,6 +13,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/home']">Home</a></li>
+                <li><a [routerLink]="['/news']">News</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
