--- a/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
@@ -1,36 +1,41 @@
 ﻿<div class="container-fluid">
 
-    <h1>Send some basic messages</h1>
-
+    <h1>Send some basic news messages</h1>
 
     <div class="row">
-        <form class="form-inline" (ngSubmit)="sendMessage()" #messageForm="ngForm">
+        <form class="form-inline" (ngSubmit)="sendNewsItem()" #newsItemForm="ngForm">
             <div class="form-group">
-                <label class="sr-only" for="message">Message</label>
-                <input type="text" class="form-control" id="message" placeholder="your message..." name="message" [(ngModel)]="message" required>
+                <label class="sr-only" for="header">Header</label>
+                <input type="text" class="form-control" id="header" placeholder="your header..." name="header" [(ngModel)]="newsItem.header" required>
             </div>
-            <button type="submit" class="btn btn-primary" [disabled]="!messageForm.valid">Send SignalR Message</button>
+            <div class="form-group">
+                <label class="sr-only" for="header">Text</label>
+                <input type="text" class="form-control" id="newsText" placeholder="your newsText..." name="newsText" [(ngModel)]="newsItem.newsText" required>
+            </div>
+            <button type="submit" class="btn btn-primary" [disabled]="!newsItemForm.valid">Send SignalR News message</button>
         </form>
     </div>
-    <div class="row" *ngIf="messages.length > 0">
+    <div class="row" *ngIf="newsItems.length > 0">
         <div class="table-responsive">
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>Messages</th>
+                        <th>header</th>
+                        <th>Text</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let message of messages; let i = index">
+                    <tr *ngFor="let item of newsItems; let i = index">
                         <td>{{i + 1}}</td>
-                        <td>{{message}}</td>
+                        <td>{{item.header}}</td>
+                        <td>{{item.newsText}}</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
-    <div class="row" *ngIf="messages.length <= 0">
-        <span>No messages</span>
+    <div class="row" *ngIf="newsItems.length <= 0">
+        <span>No news items</span>
     </div>
 </div>
