--- a/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
@@ -14,6 +14,7 @@
             </div>
             <button type="submit" class="btn btn-primary" [disabled]="!newsItemForm.valid">Send SignalR News message</button>
         </form>
+        <button class="btn btn-primary" (click)="join()">Join</button>
     </div>
     <div class="row" *ngIf="newsItems.length > 0">
         <div class="table-responsive">
