removing multiple subscribes from the news component

--- a/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
@@ -31,7 +31,7 @@
         </form>
     </div>
 
-    <div class="row" *ngIf="(newsState$|async)?.newsItems.length > 0">
+    <div class="row" *ngIf="newsItems?.length > 0">
         <div class="table-responsive">
             <table class="table table-striped">
                 <thead>
@@ -44,7 +44,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let item of (newsState$|async)?.newsItems; let i = index">
+                    <tr *ngFor="let item of newsItems; let i = index">
                         <td>{{i + 1}}</td>
                         <td>{{item.Header}}</td>
                         <td>{{item.NewsText}}</td>
@@ -56,7 +56,7 @@
         </div>
     </div>
  
-    <div class="row" *ngIf="(newsState$|async)?.length <= 0">
+    <div class="row" *ngIf="newsItems?.length <= 0">
         <span>No news items</span>
     </div>
 </div>
