Get the history

--- a/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
@@ -40,7 +40,7 @@
                         <th>header</th>
                         <th>Text</th>
                         <th>Author</th>
-                        <th>roup</th>
+                        <th>Group</th>
                     </tr>
                 </thead>
                 <tbody>
