Adding a select for the groups

--- a/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
@@ -1,18 +1,26 @@
 ﻿<div class="container-fluid">
 
-    <h1>Send some basic news messages</h1>
-
     <div class="row">
-        <form class="form-inline" >
+        
+        <div class="form-inline" >
             <div class="form-group">
-                <label for="header">Group</label>
-                <input type="text" class="form-control" id="header" placeholder="your header..." name="header" [(ngModel)]="group" required>
+                
+                <label for="group">Group: </label>
+                <select class="form-control" type="number" [(ngModel)]="group">
+                    <option *ngFor="let g of groups" [ngValue]="g">{{g}}</option>
+                </select>
+
+              
+                <label for="author">Author: </label>
+                <input type="text" class="form-control" id="author" placeholder="your name" name="author" [(ngModel)]="author" required>
             </div>
             <button class="btn btn-primary" (click)="join()">Join</button>
             <button class="btn btn-primary" (click)="leave()">Leave</button>
-        </form>
+        </div>
     </div>
+
     <hr />
+
     <div class="row">
         <form class="form" (ngSubmit)="sendNewsItem()" #newsItemForm="ngForm">
             <div class="form-group">
@@ -22,10 +30,6 @@
             <div class="form-group">
                 <label for="newsText">Text</label>
                 <input type="text" class="form-control" id="newsText" placeholder="your newsText..." name="newsText" [(ngModel)]="newsItem.NewsText" required>
-            </div>
-            <div class="form-group">
-                <label for="newsText">Author</label>
-                <input type="text" class="form-control" id="author" placeholder="your newsText..." name="author" [(ngModel)]="newsItem.Author" required>
             </div>
             <button type="submit" class="btn btn-primary" [disabled]="!newsItemForm.valid">Send News to: {{group}}</button>
         </form>
