fixes for lowercase json properties

--- a/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
@@ -61,10 +61,10 @@
                 <tbody>
                     <tr *ngFor="let item of newsItems; let i = index">
                         <td>{{i + 1}}</td>
-                        <td>{{item.Header}}</td>
-                        <td>{{item.NewsText}}</td>
-                        <td>{{item.Author}}</td>
-                        <td>{{item.NewsGroup}}</td>
+                        <td>{{item.header}}</td>
+                        <td>{{item.newsText}}</td>
+                        <td>{{item.author}}</td>
+                        <td>{{item.newsGroup}}</td>
                     </tr>
                 </tbody>
             </table>
