--- a/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/news/components/news.component.html
@@ -27,13 +27,13 @@
             <div class="form-group">
                 <label for="header" class="col-sm-2 control-label">Header</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="header" placeholder="your header..." name="header" [(ngModel)]="newsItem.Header" required>
+                    <input type="text" class="form-control" id="header" placeholder="your header..." name="header" [(ngModel)]="newsItem.header" required>
                 </div>
             </div>
             <div class="form-group">
                 <label for="newsText" class="col-sm-2 control-label">Text</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="newsText" placeholder="your newsText..." name="newsText" [(ngModel)]="newsItem.NewsText" required>
+                    <input type="text" class="form-control" id="newsText" placeholder="your newsText..." name="newsText" [(ngModel)]="newsItem.newsText" required>
                 </div>
             </div>
             <div class="form-group">
