--- a/src/AspNetCoreAngularSignalR/angularApp/app/shared/components/navigation/navigation.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/shared/components/navigation/navigation.component.html
@@ -14,6 +14,7 @@
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/home']">Home</a></li>
                 <li><a [routerLink]="['/news']">News</a></li>
+                <li><a [routerLink]="['/images']">Images</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
