Uploading images with SignalR

--- a/src/AspNetCoreAngularSignalR/angularApp/app/images/components/images.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/images/components/images.component.html
@@ -2,40 +2,33 @@
 
     <h1>Images</h1>
 
+   <a href="https://localhost:44324/FileClient/Index" target="_blank">Upload Images</a> 
 
-    <div class="row">
-        <form class="form-inline" (ngSubmit)="sendMessage()" #messageForm="ngForm">
-            <div class="form-group">
-                <label class="sr-only" for="message">Message</label>
-                <input type="text" class="form-control" id="message" placeholder="your message..." name="message" [(ngModel)]="message" required>
-            </div>
-            <button type="submit" class="btn btn-primary" [disabled]="!messageForm.valid">Send SignalR Message</button>
-        </form>
-    </div>
-    <div class="row" *ngIf="messages.length > 0">
-        <div class="table-responsive">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Messages</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let message of messages; let i = index">
-                        <td>{{i + 1}}</td>
-                        <td>{{message}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+   <!--<div class="row" *ngIf="messages.length > 0">
+       <div class="table-responsive">
+           <table class="table table-striped">
+               <thead>
+                   <tr>
+                       <th>#</th>
+                       <th>Images</th>
+                   </tr>
+               </thead>
+               <tbody>
+                   <tr *ngFor="let message of messages; let i = index">
+                       <td>{{i + 1}}</td>
+                       <td>{{message}}</td>
+                   </tr>
+               </tbody>
+           </table>
+       </div>
+   </div>-->
 
     <div class="row" *ngIf="images.length > 0">
-        <img *ngFor="let image of images;" [src]="images.imageHeaders + images.imageBinary">
+        <img *ngFor="let image of images;" [src]="image.imageHeaders + image.imageBinary">
     </div>
 
     <div class="row" *ngIf="messages.length <= 0">
-        <span>No messages</span>
+        <br />
+        <span>No images</span>
     </div>
 </div>
