code up image uploaded

--- a/src/AspNetCoreAngularSignalR/Views/Shared/_Layout.cshtml
+++ b/src/AspNetCoreAngularSignalR/Views/Shared/_Layout.cshtml
@@ -18,12 +18,8 @@
 </head>
 <body>
 
-    <div class="container body-content">
+    <div>
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2018 - MVC Upload</p>
-        </footer>
     </div>
 
     <environment names="Development">
