--- a/src/AspNetCoreAngularSignalR/angularApp/app/shared/components/navigation/navigation.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/shared/components/navigation/navigation.component.html
@@ -1,20 +1,13 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+<nav class="bg-dark mb-4 navbar navbar-dark navbar-expand-md">
+    <div  class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
             <a class="navbar-brand" [routerLink]="['/home']"><em>Angular SignalR ASP.NET Core</em></a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a [routerLink]="['/home']">Home</a></li>
-                <li><a [routerLink]="['/news']">News</a></li>
-                <li><a [routerLink]="['/images']">Images</a></li>
+        <div class="navbar-collapse collapse" id="navbar">
+            <ul class="mr-auto navbar-nav">
+                <li class="nav-item"><a class="nav-link" [routerLink]="['/home']">Home</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['/news']">News</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['/images']">Images</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
