--- a/src/AspNetCoreAngularSignalR/angularApp/app/images/components/images.component.html
+++ b/src/AspNetCoreAngularSignalR/angularApp/app/images/components/images.component.html
@@ -4,7 +4,7 @@
 
    <a href="https://localhost:44324/FileClient/Index" target="_blank">Upload Images</a> 
 
-    <div class="row" *ngIf="images.length > 0">
+    <div *ngIf="images.length > 0">
         <img *ngFor="let image of images;" width="150" style="margin-right:5px" [src]="image.imageHeaders + image.imageBinary">
     </div>
 </div>
