--- a/src/AngularSignalR/src/app/app.component.html
+++ b/src/AngularSignalR/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-nav-menu></app-nav-menu>
+﻿<app-navigation></app-navigation>
 
-<div class='container-fluid'>
-  <div class='row'>
-    <div class='col-sm-12 body-content'>
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+<div class="container">
+
+    <router-outlet></router-outlet>
+
+    <app-custom-footer></app-custom-footer>
 </div>
